# Waycat

./: README  meson.build
res/: main.css  meson.build  ui.gresource.xml  window.glade  window.glade~  window.ui
src/: Block.vala  DragWrapper.vala  Language.vala  WaycatApp.vala  main.vala  meson.build  ui-left-sidemenu.vala  ui-middle-top-buttons.vala  ui-right-stack.vala  ui-workbench.vala
src/languages/: meson.build
src/languages/Boilerplate/: BoilerplateLanguage.vala  IStatementPlace.vala  IWorkbenchItem.vala  Statement.vala  meson.build
src/languages/Boilerplate/blocks/: AngleBlock.vala  AnglePlace.vala  CallRoundBlock.vala  DoubleRoundBlock.vala  EditableRoundBlock.vala  EntrypointBlock.vala  RoundBlock.vala  RoundPlace.vala  StatementPlace.vala  ValueBlock.vala
src/languages/Boilerplate/blocks/containers/: ContainerBlock.vala  DoubleContainerBlock.vala  ForLoopBlock.vala  ReverseContainerBlock.vala
src/languages/Boilerplate/blocks/statements/: AssignStmtBlock.vala  DeclarationStmtBlock.vala  ExpressionStmtBlock.vala  StatementBlock.vala
src/languages/Example/: BlockComponent.vala  ExampleBlock.vala  ExampleLanguage.vala  meson.build
src/languages/Example/blocks/: blocks-containers.vala  blocks-statements.vala  blocks-values.vala  helpers.vala
src/languages/Example/blocks/bases/: AngleBlock.vala  ContainerBlock.vala  DoubleContainerBlock.vala  EntrypointBlock.vala  ReverseContainerBlock.vala  RoundBlock.vala  StatementBase.vala  StatementBlock.vala
src/languages/Example/blocks/components/: AnglePlace.vala  EditableLabel.vala  RoundPlace.vala  StatementPlace.vala
src/languages/Python381/: BlockBuilder.vala  BlockComponent.vala  NodeBuilder.vala  Python381Block.vala  Python381Language.vala  meson.build  python.vapi  tokens.vapi
src/languages/Python381/blocks/bases/: AngleBlock.vala  MultiContainerBase.vala  RoundBlock.vala  SimpleStmtBase.vala  StatementBase.vala
src/languages/Python381/blocks/components/: AnglePlace.vala  EditableLabel.vala  RoundPlace.vala  SmallStmtCheck.vala  StatementPlace.vala  ToggleButton.vala
src/languages/Python381/blocks/components/bases/: CheckBase.vala  ClickLabel.vala  LabelButtonBase.vala  Stanza.vala
src/languages/Python381/blocks/real/: AnchorHeader.vala  angleBlocks.vala  compoundStmts.vala  flowStmts.vala  roundBlocks.vala  smallTrivialStmts.vala
