languages += [
	files(
	    'ExampleBlock.vala',
	    'ExampleLanguage.vala',
	    'BlockComponent.vala',
	    'blocks/bases/RoundBlock.vala',
	    'blocks/bases/AngleBlock.vala',
	    'blocks/bases/EntrypointBlock.vala',
	    'blocks/bases/StatementBase.vala',
	    'blocks/bases/StatementBlock.vala',
	    'blocks/bases/ContainerBlock.vala',
	    'blocks/bases/ReverseContainerBlock.vala',
	    'blocks/bases/DoubleContainerBlock.vala',
	    'blocks/components/RoundPlace.vala',
	    'blocks/components/AnglePlace.vala',
	    'blocks/components/StatementPlace.vala',
	    'blocks/components/EditableLabel.vala',

	    'blocks/blocks-containers.vala',
	    'blocks/blocks-statements.vala',
	    'blocks/blocks-values.vala',
	    'blocks/helpers.vala',
	)
]
