languages += [
	files(
		'Python381Language.vala',
		'Python381Block.vala',
		'BlockComponent.vala',

		'blocks/components/bases/CheckBase.vala',

		'blocks/components/StatementPlace.vala',
		'blocks/components/AnglePlace.vala',
		'blocks/components/RoundPlace.vala',
		'blocks/components/SmallStmtCheck.vala',

		'blocks/bases/StatementBase.vala',
		'blocks/bases/AngleBlock.vala',
		'blocks/bases/RoundBlock.vala',

		'blocks/real/AnchorHeader.vala',

		'tokens.vapi',
	)
]
