languages += [
	files(
		'Python381Language.vala',
		'Python381Block.vala',
		'NodeBuilder.vala',
		'BlockComponent.vala',

		'blocks/components/bases/CheckBase.vala',
		'blocks/components/bases/LabelButtonBase.vala',
		'blocks/components/bases/Stanza.vala',

		'blocks/components/StatementPlace.vala',
		'blocks/components/AnglePlace.vala',
		'blocks/components/RoundPlace.vala',
		'blocks/components/SmallStmtCheck.vala',
		'blocks/components/ToggleButton.vala',

		'blocks/bases/StatementBase.vala',
		'blocks/bases/SimpleStmtBase.vala',
		'blocks/bases/MultiContainerBase.vala',
		'blocks/bases/AngleBlock.vala',
		'blocks/bases/RoundBlock.vala',

		'blocks/real/AnchorHeader.vala',
		'blocks/real/smallTrivialStmts.vala',

		'tokens.vapi',
	)
]
